--- a/tugashtml.html
+++ b/tugashtml.html
@@ -27,7 +27,7 @@
                 Nama : Samuel Natanael
             </p>
             <p>
-                Akun Instagram : @samuelnatanael08
+                <a href ="https://instagram.com/samuelnatanael08?igshid=OGQ5ZDc2ODk2ZA==">@samuelnatanael08</a>
             </p>
             <p>
                 Kota : Palembang
